--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div id="logo">
-        <h1><a href="index.html"><span>e</span>Startup</a></h1>
+        <img src="../static/assets/img/tarumt-logo1.png" height="80"/>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" title="" /></a>-->
       </div>
@@ -50,29 +50,26 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about-us">About</a></li>
-          <li><a class="nav-link scrollto" href="#features">Features</a></li>
-          <li><a class="nav-link scrollto" href="#screenshots">Screenshots</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto" href="#about-us">About Us</a></li>
+          <li><a class="nav-link scrollto" href="#features">Facilities</a></li>
+          <li class="dropdown"><a href="#"><span>Research</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="#">Centre for ICT Innovations and Creativity (CICTIC)</a></li>
+              <li><a href="#">Centre for Data Science and Analytics (CDSA)</a></li>
+              <li><a href="#">Centre for Computational Intelligence (CCI)</a></li>
+              <li><a href="#">Centre for Internet of Things (CIOT)</a></li>
+              <li><a href="#">Centre for Computer Network and Cyber Security (CCNCS)</a></li>
+              <li><a href="#">Centre for Integrated Circuit Research and Development (CICR&D)</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li class="dropdown"><a href="#"><span>External Advisors</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="#">External Examiners</a></li>
+              <li><a href="#">Industrial Expert Advisory Panel (IEAP) - Bachelor Degree</a></li>
+              <li><a href="#">Industrial Expert Advisory Panel (IEAP) - Postgraduates Programmes</a></li>
+            </ul>
+          </li>
+          <li><a class="nav-link scrollto" href="#pricing">Our Team</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
