--- a/templates/base.html
+++ b/templates/base.html
@@ -54,19 +54,19 @@
           <li><a class="nav-link scrollto" href="#features">Facilities</a></li>
           <li class="dropdown"><a href="#"><span>Research</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Centre for ICT Innovations and Creativity (CICTIC)</a></li>
-              <li><a href="#">Centre for Data Science and Analytics (CDSA)</a></li>
-              <li><a href="#">Centre for Computational Intelligence (CCI)</a></li>
-              <li><a href="#">Centre for Internet of Things (CIOT)</a></li>
-              <li><a href="#">Centre for Computer Network and Cyber Security (CCNCS)</a></li>
-              <li><a href="#">Centre for Integrated Circuit Research and Development (CICR&D)</a></li>
+              <li><a href="#" class="text-wrap">Centre for ICT Innovations and Creativity (CICTIC)</a></li>
+              <li><a href="#" class="text-wrap">Centre for Data Science and Analytics (CDSA)</a></li>
+              <li><a href="#" class="text-wrap">Centre for Computational Intelligence (CCI)</a></li>
+              <li><a href="#" class="text-wrap">Centre for Internet of Things (CIOT)</a></li>
+              <li><a href="#" class="text-wrap">Centre for Computer Network and Cyber Security (CCNCS)</a></li>
+              <li><a href="#" class="text-wrap">Centre for Integrated Circuit Research and Development (CICR&D)</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>External Advisors</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">External Examiners</a></li>
-              <li><a href="#">Industrial Expert Advisory Panel (IEAP) - Bachelor Degree</a></li>
-              <li><a href="#">Industrial Expert Advisory Panel (IEAP) - Postgraduates Programmes</a></li>
+            <ul >
+              <li><a href="#" class="text-wrap">External Examiners</a></li>
+              <li><a href="#" class="text-wrap">Industrial Expert Advisory Panel (IEAP) - Bachelor Degree</a></li>
+              <li><a href="#" class="text-wrap">Industrial Expert Advisory Panel (IEAP) - Postgraduates Programmes</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#pricing">Our Team</a></li>
