--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about-us">About Us</a></li>
-          <li><a class="nav-link scrollto" href="#features">Facilities</a></li>
+          <li><a class="nav-link scrollto" href="{{ url_for('facilities')}}">Facilities</a></li>
           <li class="dropdown"><a href="#"><span>Research</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#" class="text-wrap">Centre for ICT Innovations and Creativity (CICTIC)</a></li>
