--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -143,7 +143,8 @@ span {
 # Header
 --------------------------------------------------------------*/
 #header {
-  background: #fff;
+  background: url("../img/header-bg.jpg") no-repeat;
+  background-size: cover;
   z-index: 997;
   transition: all 0.5s ease;
   padding: 20px 0;
@@ -164,7 +165,7 @@ span {
 }
 
 #header #logo h1 a span {
-  color: #71c55d;
+  color: #EBA200;
 }
 
 #header #logo img {
@@ -194,6 +195,7 @@ span {
   display: flex;
   list-style: none;
   align-items: center;
+  gap: 2px;
 }
 
 .navbar li {
@@ -205,13 +207,14 @@ span {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 0 10px 30px;
-  font-family: "Roboto", sans-serif;
-  font-size: 15px;
-  color: #222;
+  padding: 10px 20px 10px 20px;
+  font-family: "Montserrat", Helvetica, Arial, sans-serif;;
+  font-size: 12px;
+  color: #fff;
   white-space: nowrap;
   transition: 0.3s;
   letter-spacing: 0;
+  font-weight: 700;
 }
 
 .navbar a i,
@@ -225,7 +228,7 @@ span {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #EBA200;
+  color: whitesmoke;
 }
 
 .navbar .dropdown ul {
@@ -238,7 +241,7 @@ span {
   z-index: 99;
   opacity: 0;
   visibility: hidden;
-  background: #fff;
+  background: black;
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   transition: 0.3s;
   border-radius: 4px;
@@ -260,7 +263,7 @@ span {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #71c55d;
+  color: #EBA200;
 }
 
 .navbar .dropdown:hover>ul {
@@ -291,6 +294,42 @@ span {
     left: -100%;
   }
 }
+
+.link-effect {
+  position: relative;
+  text-decoration: none;
+  color: #333;
+  transition: color 0.3s ease-out;
+}
+
+.link-effect::before,
+.link-effect::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  background-color: #ffdb4a;
+  transition: width 0.5s ease-out;
+}
+
+.link-effect::before {
+  top: 100%;
+  left: 0;
+  right: auto;
+}
+
+.link-effect::after {
+  top: 100%;
+  right: 0;
+  left: 0;
+}
+
+.link-effect:hover::before,
+.link-effect:hover::after {
+  width: 100%;
+  /* Expand the line from left to right */
+}
+
 
 /**
 * Mobile Navigation 
