--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,12 @@
   <!-- Favicons -->
   <link href="{{ url_for('static', filename='assets/img/favicon.png')}}" rel="icon">
   <link href="{{ url_for('static', filename='assets/img/apple-touch-icon.png')}}" rel="apple-touch-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="{{ url_for('static', filename='assets/vendor/aos/aos.css')}}" rel="stylesheet">
@@ -25,6 +28,19 @@
 
   <!-- Template Main CSS File -->
   <link href="{{ url_for('static', filename='assets/css/style.css')}}" rel="stylesheet">
+
+  <style>
+    .nav-cus {
+      background-color: #EBA200;
+      text-align: center;
+    }
+    
+    .gold-orange{
+      font-size: 18em;
+      background-color: red !important;
+    }
+
+  </style>
 
   <!-- =======================================================
   * Template Name: eStartup
@@ -40,19 +56,30 @@
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
-
-      <div id="logo">
-        <img src="../static/assets/img/tarumt-logo1.png" height="80"/>
+      <div id="logo" class="pt-2">
+        <img src="../static/assets/img/tarumt-logo1.png" height="80" />
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" title="" /></a>-->
       </div>
 
       <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about-us">About Us</a></li>
-          <li><a class="nav-link scrollto" href="#features">Facilities</a></li>
-          <li class="dropdown"><a href="#"><span>Research</span> <i class="bi bi-chevron-down"></i></a>
+        <ul class="d-flex justify-content-between g-2 ">
+          <li>
+            <a class="link-effect nav-link scrollto active nav-cus" href="#hero">
+              <div class="">
+              <span class="fa-stack">
+              <i class="fa fa-circle fa-stack-2x" style="font-size: 28px; color:#d28900"></i>
+              <i class="fa fa-home fa-stack-1x"  style="font-size: 14px"></i>             
+              </span>
+            </div>
+                <span class="mr-3">
+                 Home 
+                </span>
+              </a>
+          </li>
+          <li><a class="link-effect nav-link scrollto nav-cus" href="#about-us">About Us</a></li>
+          <li><a class="link-effect nav-link scrollto nav-cus" href="#features">Facilities</a></li>
+          <li class="dropdown"><a class="link-effect nav-cus" href="#"><span>Research</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#" class="text-wrap">Centre for ICT Innovations and Creativity (CICTIC)</a></li>
               <li><a href="#" class="text-wrap">Centre for Data Science and Analytics (CDSA)</a></li>
@@ -62,14 +89,15 @@
               <li><a href="#" class="text-wrap">Centre for Integrated Circuit Research and Development (CICR&D)</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="#"><span>External Advisors</span> <i class="bi bi-chevron-down"></i></a>
-            <ul >
+          <li class="link-effect dropdown"><a class="link-effect nav-cus" href="#"><span>External Advisors</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
               <li><a href="#" class="text-wrap">External Examiners</a></li>
               <li><a href="#" class="text-wrap">Industrial Expert Advisory Panel (IEAP) - Bachelor Degree</a></li>
-              <li><a href="#" class="text-wrap">Industrial Expert Advisory Panel (IEAP) - Postgraduates Programmes</a></li>
+              <li><a href="#" class="text-wrap">Industrial Expert Advisory Panel (IEAP) - Postgraduates Programmes</a>
+              </li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#pricing">Our Team</a></li>
+          <li><a class="link-effect nav-link scrollto nav-cus" href="#pricing">Our Team</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -88,7 +116,8 @@
           <div class="footer-logo">
 
             <a class="navbar-brand" href="#">eStartup</a>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the.</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+              industry's standard dummy text ever since the.</p>
 
           </div>
         </div>
@@ -173,7 +202,8 @@
 
   </footer><!-- End  Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
