added programme page and some linkage

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
         </a>
       </div>
       <div class="col-2 p-2">
-        <a href="#" class="card-link">
+        <a href="/programme" class="card-link">
           <div class="card m-1 py-2 d-flex align-content-between card-hover" style="min-height: 200px;">
             <div class="my-auto card-container">
               <img src="../static/assets/img/programmes.png" class="m-0 w-50 mx-auto" alt="Programmes">
