--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
   <div class="hero-container container d-flex flex-column">
     <div class="row justify-content-center mx-1">
       <div class="col-2 p-2">
-        <a href="#" class="card-link">
+        <a href="{{ url_for('whyChooseUs')}}" class="card-link">
           <div class="card m-1 py-2 d-flex align-content-between card-hover" style="min-height: 200px;">
             <div class="my-auto card-container">
               <img src="../static/assets/img/why-us.png" class="m-0 w-50 mx-auto" alt="Why Choose Us">
