created testimonials page, added url to base.html and index.html - Jess

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
       <nav id="navbar" class="navbar">
         <ul class="d-flex justify-content-between g-2 ">
           <li>
-            <a class="link-effect nav-link scrollto active nav-cus" href="#hero">
+            <a class="link-effect nav-link scrollto active nav-cus" href="{{ url_for('index')}}">
               <div class="">
               <span class="fa-stack">
               <i class="fa fa-circle fa-stack-2x" style="font-size: 28px; color:#d28900"></i>
