--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="{{ url_for('static', filename='assets/img/favicon.png')}}" rel="icon">
-  <link href="{{ url_for('static', filename='assets/img/apple-touch-icon.png')}}" rel="apple-touch-icon">
+  <link href="{{ url_for('static', filename='assets/img/favicon.png')}}" rel="icon" type="image/x-icon">
+  <link href="{{ url_for('static', filename='assets/img/favicon.png')}}" rel="apple-touch-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Google Fonts -->
