--- a/templates/staffDirectory.html
+++ b/templates/staffDirectory.html
@@ -2,7 +2,7 @@
 {% block title %} Facilities {% endblock %} 
 {%block content %} 
 
-<div class="container-fluid text-center" style="background-image: url(../static/assets/img/header-image.jpg)">
+<div class="container-fluid text-center" style="background-image: url(../static/assets/img/header-image.jpg;); height: auto; width: 100%; ">
     <h1>Facilities</h1>
 </div>
 
