--- a/templates/base.html
+++ b/templates/base.html
@@ -1,220 +1,259 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>{% block title %}{% endblock %}</title>
+    <meta content="" name="description" />
+    <meta content="" name="keywords" />
 
-  <title>{% block title %}{% endblock %}</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+    <!-- Favicons -->
+    <link
+      href="{{ url_for('static', filename='assets/img/favicon.png')}}"
+      rel="icon"
+      type="image/x-icon"
+    />
+    <link
+      href="{{ url_for('static', filename='assets/img/favicon.png')}}"
+      rel="apple-touch-icon"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
-  <!-- Favicons -->
-  <link href="{{ url_for('static', filename='assets/img/favicon.png')}}" rel="icon" type="image/x-icon">
-  <link href="{{ url_for('static', filename='assets/img/favicon.png')}}" rel="apple-touch-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i"
+      rel="stylesheet"
+    />
 
-  <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i"
-    rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link
+      href="{{ url_for('static', filename='assets/vendor/aos/aos.css')}}"
+      rel="stylesheet"
+    />
+    <link
+      href="{{ url_for('static', filename='assets/vendor/bootstrap/css/bootstrap.min.css')}}"
+      rel="stylesheet"
+    />
+    <link
+      href="{{ url_for('static', filename='assets/vendor/bootstrap-icons/bootstrap-icons.css')}}"
+      rel="stylesheet"
+    />
+    <link
+      href="{{ url_for('static', filename='assets/vendor/glightbox/css/glightbox.min.css')}}"
+      rel="stylesheet"
+    />
+    <link
+      href="{{ url_for('static', filename='assets/vendor/swiper/swiper-bundle.min.css')}}"
+      rel="stylesheet"
+    />
 
-  <!-- Vendor CSS Files -->
-  <link href="{{ url_for('static', filename='assets/vendor/aos/aos.css')}}" rel="stylesheet">
-  <link href="{{ url_for('static', filename='assets/vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
-  <link href="{{ url_for('static', filename='assets/vendor/bootstrap-icons/bootstrap-icons.css')}}" rel="stylesheet">
-  <link href="{{ url_for('static', filename='assets/vendor/glightbox/css/glightbox.min.css')}}" rel="stylesheet">
-  <link href="{{ url_for('static', filename='assets/vendor/swiper/swiper-bundle.min.css')}}" rel="stylesheet">
+    <!-- Template Main CSS File -->
+    <link
+      href="{{ url_for('static', filename='assets/css/style.css')}}"
+      rel="stylesheet"
+    />
 
-  <!-- Template Main CSS File -->
-  <link href="{{ url_for('static', filename='assets/css/style.css')}}" rel="stylesheet">
+    <style>
+      .nav-cus {
+        background-color: #eba200;
+        text-align: center;
+      }
 
-  <style>
-    .nav-cus {
-      background-color: #EBA200;
-      text-align: center;
-    }
-    
-    .gold-orange{
-      font-size: 18em;
-      background-color: red !important;
-    }
+      .gold-orange {
+        font-size: 18em;
+        background-color: red !important;
+      }
+    </style>
 
-  </style>
-
-  <!-- =======================================================
+    <!-- =======================================================
   * Template Name: eStartup
   * Updated: Jul 27 2023 with Bootstrap v5.3.1
   * Template URL: https://bootstrapmade.com/estartup-bootstrap-landing-page-template/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-</head>
+  </head>
 
-<body>
+  <body>
+    <!-- ======= Header ======= -->
+    <header id="header" class="header fixed-top d-flex align-items-center">
+      <div class="container d-flex align-items-center justify-content-between">
+        <div id="logo" class="pt-2">
+          <img src="../static/assets/img/tarumt-logo1.png" height="80" />
+          <!-- Uncomment below if you prefer to use an image logo -->
+          <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" title="" /></a>-->
+        </div>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="header fixed-top d-flex align-items-center">
-    <div class="container d-flex align-items-center justify-content-between">
-      <div id="logo" class="pt-2">
-        <img src="../static/assets/img/tarumt-logo1.png" height="80" />
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" title="" /></a>-->
-      </div>
-
-      <nav id="navbar" class="navbar">
-        <ul class="d-flex justify-content-between g-2 ">
-          <li>
-            <a class="link-effect nav-link scrollto active nav-cus" href="{{ url_for('index')}}">
-              <div class="">
-              <span class="fa-stack">
-              <i class="fa fa-circle fa-stack-2x" style="font-size: 28px; color:#d28900"></i>
-              <i class="fa fa-home fa-stack-1x"  style="font-size: 14px"></i>             
-              </span>
-            </div>
-                <span class="mr-3">
-                 Home 
-                </span>
+        <nav id="navbar" class="navbar">
+          <ul class="d-flex justify-content-between g-2">
+            <li>
+              <a
+                class="link-effect nav-link scrollto active nav-cus"
+                href="{{ url_for('index')}}"
+              >
+                <div class="">
+                  <span class="fa-stack">
+                    <i
+                      class="fa fa-circle fa-stack-2x"
+                      style="font-size: 28px; color: #d28900"
+                    ></i>
+                    <i
+                      class="fa fa-home fa-stack-1x"
+                      style="font-size: 14px"
+                    ></i>
+                  </span>
+                </div>
+                <span class="mr-3"> Home </span>
               </a>
-          </li>
-          <li><a class="link-effect nav-link scrollto nav-cus" href="#about-us">About Us</a></li>
-          <li><a class="link-effect nav-link scrollto nav-cus" href="{{ url_for('facilities')}}">Facilities</a></li>
-          <li class="dropdown"><a class="link-effect nav-cus" href="#"><span>Research</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#" class="text-wrap">Centre for ICT Innovations and Creativity (CICTIC)</a></li>
-              <li><a href="#" class="text-wrap">Centre for Data Science and Analytics (CDSA)</a></li>
-              <li><a href="#" class="text-wrap">Centre for Computational Intelligence (CCI)</a></li>
-              <li><a href="#" class="text-wrap">Centre for Internet of Things (CIOT)</a></li>
-              <li><a href="#" class="text-wrap">Centre for Computer Network and Cyber Security (CCNCS)</a></li>
-              <li><a href="#" class="text-wrap">Centre for Integrated Circuit Research and Development (CICR&D)</a></li>
-            </ul>
-          </li>
-          <li class="link-effect dropdown"><a class="link-effect nav-cus" href="#"><span>External Advisors</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#" class="text-wrap">External Examiners</a></li>
-              <li><a href="#" class="text-wrap">Industrial Expert Advisory Panel (IEAP) - Bachelor Degree</a></li>
-              <li><a href="#" class="text-wrap">Industrial Expert Advisory Panel (IEAP) - Postgraduates Programmes</a>
-              </li>
-            </ul>
-          </li>
-          <li><a class="link-effect nav-link scrollto nav-cus" href="#pricing">Our Team</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
-    </div>
-  </header><!-- End Header -->
-
-  {%block content%} {%endblock%}
-
-  <!-- ======= Footer ======= -->
-  <footer class="footer">
-    <div class="container">
-      <div class="row">
-
-        <div class="col-md-12 col-lg-4">
-          <div class="footer-logo">
-
-            <a class="navbar-brand" href="#">eStartup</a>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-              industry's standard dummy text ever since the.</p>
-
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3 col-lg-2">
-          <div class="list-menu">
-
-            <h4>Abou Us</h4>
-
-            <ul class="list-unstyled">
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Features item</a></li>
-              <li><a href="#">Live streaming</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-            </ul>
-
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3 col-lg-2">
-          <div class="list-menu">
-
-            <h4>Abou Us</h4>
-
-            <ul class="list-unstyled">
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Features item</a></li>
-              <li><a href="#">Live streaming</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-            </ul>
-
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3 col-lg-2">
-          <div class="list-menu">
-
-            <h4>Support</h4>
-
-            <ul class="list-unstyled">
-              <li><a href="#">faq</a></li>
-              <li><a href="#">Editor help</a></li>
-              <li><a href="#">Contact us</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-            </ul>
-
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3 col-lg-2">
-          <div class="list-menu">
-
-            <h4>Abou Us</h4>
-
-            <ul class="list-unstyled">
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Features item</a></li>
-              <li><a href="#">Live streaming</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-            </ul>
-
-          </div>
-        </div>
-
+            </li>
+            <li>
+              <a class="link-effect nav-link scrollto nav-cus" href="#about-us"
+                >About Us</a
+              >
+            </li>
+            <li>
+              <a
+                class="link-effect nav-link scrollto nav-cus"
+                href="{{ url_for('facilities')}}"
+                >Facilities</a
+              >
+            </li>
+            <li class="dropdown">
+              <a class="link-effect nav-cus" href="#"
+                ><span>Research</span> <i class="bi bi-chevron-down"></i
+              ></a>
+              <ul>
+                <li>
+                  <a href="#" class="text-wrap"
+                    >Centre for ICT Innovations and Creativity (CICTIC)</a
+                  >
+                </li>
+                <li>
+                  <a href="#" class="text-wrap"
+                    >Centre for Data Science and Analytics (CDSA)</a
+                  >
+                </li>
+                <li>
+                  <a href="#" class="text-wrap"
+                    >Centre for Computational Intelligence (CCI)</a
+                  >
+                </li>
+                <li>
+                  <a href="#" class="text-wrap"
+                    >Centre for Internet of Things (CIOT)</a
+                  >
+                </li>
+                <li>
+                  <a href="#" class="text-wrap"
+                    >Centre for Computer Network and Cyber Security (CCNCS)</a
+                  >
+                </li>
+                <li>
+                  <a href="#" class="text-wrap"
+                    >Centre for Integrated Circuit Research and Development
+                    (CICR&D)</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li class="link-effect dropdown">
+              <a class="link-effect nav-cus" href="#"
+                ><span>External Advisors</span>
+                <i class="bi bi-chevron-down"></i
+              ></a>
+              <ul>
+                <li><a href="#" class="text-wrap">External Examiners</a></li>
+                <li>
+                  <a href="#" class="text-wrap"
+                    >Industrial Expert Advisory Panel (IEAP) - Bachelor
+                    Degree</a
+                  >
+                </li>
+                <li>
+                  <a href="#" class="text-wrap"
+                    >Industrial Expert Advisory Panel (IEAP) - Postgraduates
+                    Programmes</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a class="link-effect nav-link scrollto nav-cus" href="#pricing"
+                >Our Team</a
+              >
+            </li>
+          </ul>
+          <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav>
+        <!-- .navbar -->
       </div>
-    </div>
+    </header>
+    <!-- End Header -->
 
-    <div class="copyrights">
+    {%block content%} {%endblock%}
+
+    <!-- ======= Footer ======= -->
+    <footer class="footer">
       <div class="container">
-        <p>&copy; Copyrights eStartup. All rights reserved.</p>
-        <div class="credits">
-          <!--
+        <div class="row">
+          <div class="col-md-12 col-lg-4">
+            <div class="footer-logo">
+              <a class="navbar-brand" href="#">Contact Us</a>
+              <p>
+                FACULTY OF COMPUTING AND INFORMATION TECHNOLOGY TUNKU ABDUL
+                RAHMAN UNIVERSITY OF MANAGEMENT AND TECHNOLOGY JALAN GENTING
+                KELANG SETAPAK 53300 KUALA LUMPUR
+              </p>
+              <p>
+                TELEPHONE: 603-41450123 Ext no. 3233 MOBILE PHONE: 6011-10758554
+                FAX: 603-41423166 / 018 925 1001 EMAIL : focs@tarc.edu.my
+              </p>
+              <p>OPENING HOURS 8.30am - 5.30pm (Monday - Friday)</p>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-md-3 col-lg-2">
+            <div class="list-menu">
+              <h4>Locations</h4>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7967.075625883707!2d101.72655700000001!3d3.215255!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc3843bfb6a031%3A0x2dc5e067aae3ab84!2sTunku%20Abdul%20Rahman%20University%20of%20Management%20and%20Technology%20(TAR%20UMT)!5e0!3m2!1sen!2sus!4v1694603779903!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+          </div>
+
+      <div class="copyrights">
+        <div class="container">
+          TAR UMT © 2023 All Rights Reserved
+          <b>Disclaimer Privacy Policy</b> and <b>ABAC Policy</b>
+          <div class="credits">
+            <!--
           All the links in the footer should remain intact.
           You can delete the links only if you purchased the pro version.
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eStartup
         -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          </div>
         </div>
       </div>
-    </div>
+    </footer>
+    <!-- End  Footer -->
 
-  </footer><!-- End  Footer -->
+    <a
+      href="#"
+      class="back-to-top d-flex align-items-center justify-content-center"
+      ><i class="bi bi-arrow-up-short"></i
+    ></a>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
-
-</body>
-
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
