--- a/templates/base.html
+++ b/templates/base.html
@@ -219,21 +219,24 @@
           <div class="col-sm-6 col-md-3 col-lg-2">
             <div class="list-menu">
               <h4>Locations</h4>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7967.075625883707!2d101.72655700000001!3d3.215255!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc3843bfb6a031%3A0x2dc5e067aae3ab84!2sTunku%20Abdul%20Rahman%20University%20of%20Management%20and%20Technology%20(TAR%20UMT)!5e0!3m2!1sen!2sus!4v1694603779903!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7967.075625883707!2d101.72655700000001!3d3.215255!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc3843bfb6a031%3A0x2dc5e067aae3ab84!2sTunku%20Abdul%20Rahman%20University%20of%20Management%20and%20Technology%20(TAR%20UMT)!5e0!3m2!1sen!2sus!4v1694603779903!5m2!1sen!2sus"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
             </div>
           </div>
-
-      <div class="copyrights">
-        <div class="container">
-          TAR UMT © 2023 All Rights Reserved
-          <b>Disclaimer Privacy Policy</b> and <b>ABAC Policy</b>
-          <div class="credits">
-            <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eStartup
-        -->
+        </div>
+        <div class="copyrights" style="background-color: #2a2c30;">
+          <div class="container">
+            <p class="text-white">
+              TAR UMT © 2023 All Rights Reserved
+              <b style="color:#ffdb4a">Disclaimer Privacy Policy</b> and <b style="color: #ffdb4a;">ABAC Policy</b>
+            </p>
           </div>
         </div>
       </div>
