--- a/templates/base.html
+++ b/templates/base.html
@@ -200,23 +200,23 @@
     <footer class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 col-lg-4">
+          <div class="col-md">
             <div class="footer-logo">
               <a class="navbar-brand" href="#">Contact Us</a>
               <p>
-                FACULTY OF COMPUTING AND INFORMATION TECHNOLOGY TUNKU ABDUL
-                RAHMAN UNIVERSITY OF MANAGEMENT AND TECHNOLOGY JALAN GENTING
-                KELANG SETAPAK 53300 KUALA LUMPUR
+                FACULTY OF COMPUTING AND INFORMATION TECHNOLOGY <br> TUNKU ABDUL
+                RAHMAN UNIVERSITY OF MANAGEMENT AND TECHNOLOGY <br> JALAN GENTING
+                KELANG <br> SETAPAK 53300 <br> KUALA LUMPUR
               </p>
               <p>
-                TELEPHONE: 603-41450123 Ext no. 3233 MOBILE PHONE: 6011-10758554
-                FAX: 603-41423166 / 018 925 1001 EMAIL : focs@tarc.edu.my
+                TELEPHONE: 603-41450123 Ext no. 3233 <br> MOBILE PHONE: 6011-10758554
+                <br> FAX: 603-41423166 / 018 925 1001 <br> EMAIL : focs@tarc.edu.my
               </p>
               <p>OPENING HOURS 8.30am - 5.30pm (Monday - Friday)</p>
             </div>
           </div>
 
-          <div class="col-sm-6 col-md-3 col-lg-2">
+          <div class="col-md">
             <div class="list-menu">
               <h4>Locations</h4>
               <iframe
