Fixed Header Overlapping issue - Kae

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,10 @@
         font-size: 18em;
         background-color: red !important;
       }
+
+      .void-overlap{
+        margin-top: 128px;
+      }
     </style>
 
     <!-- =======================================================
@@ -193,9 +197,9 @@
       </div>
     </header>
     <!-- End Header -->
-
+  <section class="void-overlap">
     {%block content%} {%endblock%}
-
+  </section>
     <!-- ======= Footer ======= -->
     <footer class="footer">
       <div class="container">
