--- a/templates/whyChooseUs.html
+++ b/templates/whyChooseUs.html
@@ -19,7 +19,7 @@ Why Choose Us
 <main id = "whyChooseUs">
   <div class="whyChooseUsHeader">
     <img src="../static/assets/img/whyChooseUsHeader.PNG" alt="Why Choose Us (Header)"
-      style="padding-top:100px; width: 100%; height: auto; object-fit: contain">
+      style="width: 100%; height: auto; object-fit: contain">
 
     <!-- Need Change Word Font -->
     <h1>Why Choose Us</h1>
