--- a/templates/testimonials.html
+++ b/templates/testimonials.html
@@ -5,11 +5,27 @@ Testimonials
 
 {%block content %}
 <style>
-  /* div class for h1 */
 
 </style>
 
-<main id = "testimonials">
+<main>
+  <div style="background-image: url('../static/assets/img/Testimonial-bg.jpg'); background-position: top 80%; background-size: cover; width: 100%; height: 300px;">
+    <h1 class="position-absolute ml-2" style="margin-top: 185px; color:white; margin-left: 120px;">Testimonials</h1>
+  </div>
+  <div id="">
+    <div class="container d-flex flex-column">
+      <div class="row justify-content-center m-2">
+        <div class="col-9 text-center">
+          <h1>FOCS Alumni</h1>
+          <div class="row">
 
+          </div>
+        </div>
+        <div class="col-3">
+
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
 {%endblock %}
