--- a/templates/staffDirectory.html
+++ b/templates/staffDirectory.html
@@ -1,13 +1,32 @@
-{% extends "base.html"%} 
-{% block title %} Facilities {% endblock %} 
-{%block content %} 
+{% extends "base.html"%} {% block title %} Staff Directory {% endblock %}
+{%block content %}
 
-<div class="container-fluid text-center" style="background-image: url(../static/assets/img/header-image.jpg;); height: auto; width: 100%; ">
-    <h1>Facilities</h1>
+<div
+  class="container-fluid text-center text-white d-flex align-items-center"
+  style="
+    background-image: url(../static/assets/img/header-image.jpg);
+    background-position: center 80%;
+    background-size: cover;
+    height: auto;
+    width: 100%;
+  "
+>
+  <div class="container-fluid justify-content-center">
+    <h1>Staff Directory</h1>
+  </div>
 </div>
 
-<section class="container-fluid">
-    
-</section>
+<section class="mt-5 mb-5 container-fluid">
+  <div class="text pt-5 text-center">
+    <h2>Staff Directory</h2>
+  </div>
+  <div class="row">
+    <div class="col-md-8">
+        
+    </div>
+    <div class="col-md-4">
 
+    </div>
+  </div>
+</section>
 {%endblock %}
