--- a/templates/programme.html
+++ b/templates/programme.html
@@ -1,43 +1,28 @@
 {% extends "base.html"%}
 {% block title %} programme {% endblock %}
 {%block content %}
-<style>
-    /* Custom CSS for centered navbar */
-    .centered-navbar {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh; /* Set the height to 100% of the viewport height for vertical centering */
-    }
-</style>
-<main id="hero">
+<div class="container-fluid">
+
+
+<div class="row">
+  <div class="col">
     <h1>Programmes</h1>
-    <div class="centered-navbar">
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container">
-                <a class="navbar-brand" href="#">My Website</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
-</main>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+    <img src="../static/assets/img/programme1.png">
+  </div>
+  <div class="col">
+    <img src="../static/assets/img/programme2.png">
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+
+  </div>
+</div>
+</div>
 {% endblock %}
