--- a/templates/programme.html
+++ b/templates/programme.html
@@ -14,6 +14,14 @@
           margin: 0%;
           padding: 0%;
         }
+        .square-icon {
+            position: absolute;
+            left: -30px; /* Adjust the position of the square icon */
+            top: 0;
+            width: 20px;
+            height: 20px;
+            background-color: #007bff; /* Change the square color as desired */
+        }
 </style>
 
 <div class="container-fluid">
@@ -42,11 +50,11 @@
 
   <div class="row">
     <div class="">
-      <ul class="nav justify-content-center">
-        <li class="nav-item"><a class="nav-link" href="#">Doctor of Philosophy</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Master Degree</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Bachelor</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Diploma</a></li>
+      <ul class="nav justify-content-center nav-tabs nav-justified">
+        <li class="nav-item"><a class="nav-link" href="#"><div class="">Doctor of Philosophy</div></a></li>
+        <li class="nav-item"><a class="nav-link" href="#"><div class="">Master Degree</div></a></li>
+        <li class="nav-item"><a class="nav-link" href="#"><div class="">Bachelor</div></a></li>
+        <li class="nav-item"><a class="nav-link" href="#"><div class="">Diploma</div></a></li>
       </ul>
     </div>
   </div>
