--- a/templates/base.html
+++ b/templates/base.html
@@ -170,15 +170,15 @@
                 <i class="bi bi-chevron-down"></i
               ></a>
               <ul>
-                <li><a href="#" class="text-wrap">External Examiners</a></li>
+                <li><a href="{{ url_for('externalExaminers')}}" class="text-wrap">External Examiners</a></li>
                 <li>
-                  <a href="#" class="text-wrap"
+                  <a href="{{ url_for('IEAPBachelorDegree')}}" class="text-wrap"
                     >Industrial Expert Advisory Panel (IEAP) - Bachelor
                     Degree</a
                   >
                 </li>
                 <li>
-                  <a href="#" class="text-wrap"
+                  <a href="{{ url_for('IEAPPostgraduate')}}" class="text-wrap"
                     >Industrial Expert Advisory Panel (IEAP) - Postgraduates
                     Programmes</a
                   >
