template for programmes page

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
           </div>
           <div class="card-hover">
             <div class="card h-100 py-4">
-              <a href="/programme" class="card-link">
+              <a href="{{ url_for('programme')}}" class="card-link">
                 <div class="card-body d-flex flex-column justify-content-center align-items-center">
                   <img src="../static/assets/img/programmes.png" alt="Programmes" style="min-width: 82px; max-width: 82px;">
                   <p class="card-title text-center">Programmes</p>
@@ -101,7 +101,7 @@
           </div>
           <div class="card-hover">
             <div class="card h-100 py-4">
-              <a href="/recognition" class="card-link">
+              <a href="{{ url_for('recognition')}}" class="card-link">
                 <div class="card-body d-flex flex-column justify-content-center align-items-center">
                   <img src="../static/assets/img/Recognition.png" alt="Recognition" style="min-width: 82px; max-width: 82px;">
                   <p class="card-title text-center">Recognition</p>
