--- a/templates/programme.html
+++ b/templates/programme.html
@@ -57,17 +57,17 @@
         <div id="doctor" class="tab-pane fade show active">
           <p>The Faculty of Computing and Information Technology (FOCS) offers the following Doctor of Philosophy programmes:</p>
             <ul>
-              <li><a href="">Doctor of Philosophy (Computer Science)</a></li>
-              <li><a href="">Doctor of Philosophy (Information Technology)</a></li>
-              <li><a href="">Doctor of Philosophy (Mathematical Sciences)</a></li>
+              <li><a href="{{ url_for('programme1')}}">Doctor of Philosophy (Computer Science)</a></li>
+              <li><a href="{{ url_for('programme1')}}">Doctor of Philosophy (Information Technology)</a></li>
+              <li><a href="{{ url_for('programme1')}}">Doctor of Philosophy (Mathematical Sciences)</a></li>
             </ul>
         </div>
         <div id="master" class="tab-pane fade">
           <p>The Faculty of Computing and Information Technology (FOCS) offers the following Master Degree programmes:</p>
             <ul>
-              <li><a href="">Master of Computer Science</a></li>
-              <li><a href="">Master of Information Technology</a></li>
-              <li><a href="">Master of Science in Mathematical Sciences</a></li>
+              <li><a href="{{ url_for('programme1')}}">Master of Computer Science</a></li>
+              <li><a href="{{ url_for('programme1')}}">Master of Information Technology</a></li>
+              <li><a href="{{ url_for('programme1')}}">Master of Science in Mathematical Sciences</a></li>
             </ul>
         </div>
         <div id="bachelor" class="tab-pane fade">
@@ -75,25 +75,25 @@
           <ul>
             <li>Bachelor of Science
               <ul>
-                <li><a href="">Management Mathematics with Computing</a></li>
+                <li><a href="{{ url_for('programme2')}}">Management Mathematics with Computing</a></li>
               </ul>
             </li>
             <li>Bachelor of Computer Science
               <ul>
-                <li><a href="">Interactive Software Technology</a></li>
-                <li><a href="">Data Science</a></li>
+                <li><a href="{{ url_for('programme2')}}">Interactive Software Technology</a></li>
+                <li><a href="{{ url_for('programme2')}}">Data Science</a></li>
               </ul>
             </li>
             <li>Bachelor of Information Systems
               <ul>
-                <li><a href="">Enterprice Information System</a></li>
+                <li><a href="{{ url_for('programme2')}}">Enterprice Information System</a></li>
               </ul>
             </li>
             <li>Bachelor of Information Technology
               <ul>
-                <li><a href="">Information Security </a></li>
-                <li><a href="">Internert Technology</a></li>
-                <li><a href="">Software Systems Development</a></li>
+                <li><a href="{{ url_for('programme2')}}">Information Security </a></li>
+                <li><a href="{{ url_for('programme2')}}">Internert Technology</a></li>
+                <li><a href="{{ url_for('programme2')}}">Software Systems Development</a></li>
               </ul>
             </li>
             <li>Bachelor of Software Engineering</li>
@@ -104,10 +104,10 @@
             <ul>
               <li>Diploma Programmes
                 <ul>
-                  <li><a href="">Diploma in Computer Science</a></li>
-                  <li><a href="">Diploma in Information Systems</a></li>
-                  <li><a href="">Diploma in Information Technology</a></li>
-                  <li><a href="">Diploma in Software Engineering</a></li>
+                  <li><a href="{{ url_for('programme2')}}">Diploma in Computer Science</a></li>
+                  <li><a href="{{ url_for('programme2')}}">Diploma in Information Systems</a></li>
+                  <li><a href="{{ url_for('programme2')}}">Diploma in Information Technology</a></li>
+                  <li><a href="{{ url_for('programme2')}}">Diploma in Software Engineering</a></li>
                 </ul>
               </li>
             </ul>
