Err... i edited a lot, not sure will cause any iss

--- a/templates/base.html
+++ b/templates/base.html
@@ -200,6 +200,10 @@
   <section class="void-overlap">
     {%block content%} {%endblock%}
   </section>
+
+  <div class="bot">
+    <iframe width="350" height="430" allow="microphone;" src="https://console.dialogflow.com/api-client/demo/embedded/48ccbc08-ea43-4e43-ac73-24c8b6fbf453"></iframe>
+  </div>
     <!-- ======= Footer ======= -->
     <footer class="footer">
       <div class="container">
