--- a/templates/staffDirectory.html
+++ b/templates/staffDirectory.html
@@ -1,111 +1,109 @@
 {% extends "base.html"%} {% block title %} Staff Directory {% endblock %}
 {%block content %}
 
+<style>
+  span {
+    font-size: 0.8rem;
+  }
+</style>
+
 <div
-  class="container-fluid text-center text-white d-flex align-items-center"
+  class="container-fluid text-center text-white d-flex justify-content-center align-items-center" 
   style="
     background-image: url(../static/assets/img/header-image.jpg);
     background-position: center 80%;
     background-size: cover;
-    height: auto;
+    height: 112.39px;
     width: 100%;
   "
 >
-  <div class="container-fluid justify-content-center">
     <h1>Staff Directory</h1>
-  </div>
 </div>
 
-<div class="text py-3 text-center">
-    <h2>Staff Directory</h2>
-  </div>
-
-<section class="mt-5 mb-5 container-fluid d-flex justify-content-center" style="margin: autoa;">
+<section
+  class="mb-5 container-fluid d-flex justify-content-center"
+  style="margin: auto"
+>
   <div class="row mt-5">
     <div class="col-md-8">
+      {% for staff in staffs.items %}
       <div class="row">
         <div class="col">
           <div class="card mb-3" style="max-width: 540px">
-            <div class="row g-0">
-              <div class="col-md-4">
+            <div class="row g-0 align-items-center">
+              <div class="col-md-4 py-2 px-2">
                 <img
                   src="https://mdbcdn.b-cdn.net/wp-content/uploads/2020/06/vertical.webp"
                   alt="Trendy Pants and Shoes"
-                  class="img-fluid rounded-start"
+                  class="img-fluid rounded-start bordered"
                 />
               </div>
-              <div class="col-md-8">
+              <div class="col-md-8 py-2">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <p class="card-text">
-                    <small class="text-muted">Last updated 3 mins ago</small>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <div class="card mb-3" style="max-width: 540px">
-              <div class="row g-0">
-                <div class="col-md-4">
-                  <img
-                    src="https://mdbcdn.b-cdn.net/wp-content/uploads/2020/06/vertical.webp"
-                    alt="Trendy Pants and Shoes"
-                    class="img-fluid rounded-start"
-                  />
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                      This is a wider card with supporting text below as a
-                      natural lead-in to additional content. This content is a
-                      little bit longer.
-                    </p>
-                    <p class="card-text">
-                      <small class="text-muted">Last updated 3 mins ago</small>
-                    </p>
-                  </div>
+                  <h5 class="card-title">{{staff.staffName}}</h5>
+                  <span class="card-text"><b>{{staff.staffPosition}}</b></span>
+                  <br />
+                  <span><b>{{staff.staffTitle}}</b></span>
+                  <br />
+                  <span style="font-size: 0.6rem;">
+                    {{staff.staffFaculty}} <br />
+                    {{staff.staffEducation}} <br />
+                    {{staff.staffEmail}} <br />
+                    {{staff.staffMajor}} <br />
+                    {{staff.staffInterest}}
+                  </span>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      {% endfor %}
+
+      <div class="container mt-2">
+        <nav aria-label="Page navigation example">
+          <ul class="pagination">
+            <li class="page-item {%if not staffs.has_prev %} disabled {% endif %}"><a href="{{url_for('staffDirectoryRoute', page_num=staffs.page -1)}}" class="page-link">Previous</a></li>
+        {% for page in staffs.iter_pages() %}
+          {% if page %}
+            <li class="page-item {%if page == staffs.page %} active {% endif %}"><a href="{{ url_for('staffDirectoryRoute', page_num=page) }}" class="page-link">{{ page }}</a></li>
+          {% else %}  
+            ...
+          {% endif %}
+        
+        {% endfor %}
+        <li class="page-item {%if not staffs.has_next %} disabled {% endif %}"><a href="{{url_for('staffDirectoryRoute', page_num=staffs.page +1)}}" class="page-link">Next</a></li>
+        
+        </ul>
+        </nav>
+        </div>
     </div>
     <div class="col-md-4">
-        <form class="form">
-            <select class="form-select" aria-label="Default select example">
-                <option selected>Open this select menu</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-              </select>
-              <select class="form-select" aria-label="Default select example">
-                <option selected>Open this select menu</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-              </select>
-              <select class="form-select" aria-label="Default select example">
-                <option selected>Open this select menu</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-              </select>  
-              <br>
-              <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="button-addon2">
-                <button class="btn btn-primary" type="button" id="button-addon2">Search</button>
-              </div>              
-            </form>
+      <form class="form" method="post" action="/staffDirectory/1"> 
+        <select class="form-select">
+          <option selected value="KL">Kuala Lumpur Campus</option>
+        </select>
+        <select class="form-select">
+          <option selected value="FOCS">Faculty of Computing and Information Technology</option>
+        </select>
+        <select class="form-select">
+          <option selected value="divisions">All Divisions</option>
+        </select>
+        <br />
+        <div class="input-group mb-3">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Search"
+            aria-label="Search"
+            name="search"
+            aria-describedby="button-addon2"
+          />
+          <button class="btn btn-primary" type="submit" id="button-addon2" style="border-radius: 0;">
+            Search
+          </button>
+        </div>
+      </form>
     </div>
   </div>
 </section>
