--- a/templates/base.html
+++ b/templates/base.html
@@ -186,7 +186,7 @@
               </ul>
             </li>
             <li>
-              <a class="link-effect nav-link scrollto nav-cus" href="{{ url_for('staffDirectory')}}"
+              <a class="link-effect nav-link scrollto nav-cus" href="{{ url_for('staffDirectoryRoute', page_num = 1)}}"
                 >Our Team</a
               >
             </li>
