Highlights (Awards & Events) - Done -- Calvin

--- a/templates/whyChooseUs.html
+++ b/templates/whyChooseUs.html
@@ -21,8 +21,7 @@ Why Choose Us
     <img src="../static/assets/img/whyChooseUsHeader.PNG" alt="Why Choose Us (Header)"
       style="width: 100%; height: auto; object-fit: contain">
 
-    <!-- Need Change Word Font -->
-    <h1>Why Choose Us</h1>
+   <div class="mb-5 text-center"><h1>Programmes</h1></div>
     <img src="../static/assets/img/whyChooseUsVisualAidImage.png" alt="Why Choose Us (Visual Aid)"
       style="display: block; margin-left: auto; margin-right: auto; width: 60%;">
   </div>
