--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
           </div>
           <div class="card-hover">
             <div class="card h-100 py-4">
-              <a href="#" class="card-link">
+              <a href="{{ url_for('highlights', page_num = 1) }}" class="card-link">
                 <div class="card-body d-flex flex-column justify-content-center align-items-center">
                   <img src="../static/assets/img/Highlights.png" alt="Highlights" style="min-width: 82px; max-width: 82px;">
                   <p class="card-title text-center">Highlights</p>
