Fixed Carousel height keeps changing issue - Kae

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 
 <style>
   
-  .card-link {
+.card-link {
   display: inline-block;
   position: relative;
   overflow: hidden;
@@ -29,6 +29,9 @@
   color: black;
 }
 
+.carousel-item{
+  max-height: 350px; /* Ensure the image doesn't overflow the card */
+}
 </style>
 
 <main>
