--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
             </a>
           </li>
           <li>
-            <a class="link-effect nav-link scrollto nav-cus" href="#about-us">
+            <a class="link-effect nav-link scrollto nav-cus" href="{{ url_for('aboutUs')}}">
               <span class="fa-stack d-block me-3"> 
                 <i class="fa fa-circle fa-stack-2x nav-fa-circle"></i> 
                 <i class="fa fa-briefcase fa-stack-1x nav-fa"></i> </span>
