--- a/templates/IEAPPostgraduate.html
+++ b/templates/IEAPPostgraduate.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-External Examiners
+(IEAP) -Postgraduates Programmes
 {% endblock %}
 
 {%block content %}
