--- a/templates/facilities.html
+++ b/templates/facilities.html
@@ -5,7 +5,7 @@ content %}
   <h1 class="position-absolute ml-2" style="margin-top: 50px; color:white; margin-left: 120px;">Facilities</h1>
 </div>
 
-<section class="mt-5 mb-5 container-fluid">
+<section class="mb-5 container-fluid">
     <div class="text pt-5 text-center">
         <h2>Facilities</h2>
     </div>
