--- a/templates/base.html
+++ b/templates/base.html
@@ -101,7 +101,7 @@
             </a>
             <ul>
               <li>
-                <a href="#" class="text-wrap">Centre for ICT Innovations and Creativity (CICTIC)</a>
+                <a href="{{ url_for('cictis')}}" class="text-wrap">Centre for ICT Innovations and Creativity (CICTIC)</a>
               </li>
               <li>
                 <a href="#" class="text-wrap">Centre for Data Science and Analytics (CDSA)</a>
