--- a/templates/cictis.html
+++ b/templates/cictis.html
@@ -63,7 +63,7 @@ Collaboration Partners
                 products/technologies and to promote technopreneurship.</p>
               <h4>iv. Research Group</h4>
               <p>There are 4 research groups and 1 entrepreneurial support centre within CICTIC:</p>
-              <table width="100%">
+              <table width="100%" class="table align-middle table-borderless">
                 <tbody>
                   <tr>
                     <td>
