Fixed Small issue in mobile header

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -378,6 +378,15 @@ span {
   .navbar ul {
     display: none !important;
   }
+  
+  #header{
+    height: 80px;
+  }
+
+  .void-overlap{
+    margin-top: 80px !important;
+  }
+
 }
 
 .navbar-mobile {
